--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <nav class="navbar">
       <ul class="nav-list">
-        <li><a href="#">Portfolio</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -32,22 +32,24 @@
     <div class="bar"></div>
   </header>
   <main class="main-container">
-    <section class="caption">
+    <section class="headline">
       <h1>
         I'm Julius
         <br> Glad to see you!
       </h1>
       <p>
-        I’m a software developer! I can help you build a product,<br>
-         feature or website Look through some of my work and experience!<br>
-          If you like what you see and have a project you need coded,<br>
-          don’t hestiate to contact me.<br>
+        I’m a software developer! I can help you build a product , feature or website Look through some of my
+        work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.
       </p>
       <a href="#" class="connect">LET'S CONNECT</a>
       
-        <a class="btn resume-btn" href="#"> Get my resume</a>
-      </div>
-
-    
-</body>
+      <ul class="icons">
+        <li> <img src="./images/twitter.png" alt=""></li>
+        <li> <img src="./images/Linkedin icon.png" alt=""></li>
+        <li> <img src="./images/medium.png" alt=""></li>
+        <li> <img src="./images/github.png" alt=""></li>
+        <li> <img src="./images/angellist.png" alt=""></li>
+      </ul>
+      </section>
+    </main>
 </html>
